--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
                 <div class="col-md-5 col-md-offset-2">
                     <h2>What's new</h2>
                     <div class="newsentry">
-                        <h4>Talentstix auf facebook</h4>                        
+                        <h4>Talentstix auf facebook</h4> 
+                        <div class="fb-like-box" data-href="https://www.facebook.com/liahlounge" data-colorscheme="light" data-show-faces="false" data-header="false" data-stream="true" data-show-border="true"></div>                       
                     </div>
                 </div>
             </div>
-            <div class="fb-like-box" data-width="600" data-height="600" data-href="https://www.facebook.com/liahlounge" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="true" data-show-border="true"></div>
         </div>
     </div>
 </section>
