--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <h2>What's new</h2>
                     <div class="newsentry">
                         <h4>Talentstix auf facebook</h4> 
-                        <div class="fb-like-box" data-width="100%" data-href="https://www.facebook.com/liahlounge" data-colorscheme="light" data-show-faces="false" data-header="false" data-stream="true" data-show-border="true"></div>                       
+                        <div class="fb-like-box" data-href="https://www.facebook.com/liahlounge" data-colorscheme="light" data-show-faces="false" data-header="false" data-stream="true" data-show-border="false" style="Width:100%;"></div>                       
                     </div>
                 </div>
             </div>
