--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <h2>What's new</h2>
                     <div class="newsentry">
                         <h4>Talentstix auf facebook</h4> 
-                        <div class="fb-like-box" data-width="500" data-href="https://www.facebook.com/liahlounge" data-colorscheme="dark" data-show-faces="false" data-header="false" data-stream="true" data-show-border="false" style="Width:100%;"></div>                       
+                        <iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fliahlounge&amp;width=600&amp;height=395&amp;colorscheme=dark&amp;show_faces=false&amp;header=false&amp;stream=true&amp;show_border=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100%; height:395px;" allowTransparency="true"></iframe>                     
                     </div>
                 </div>
             </div>
