--- a/index.html
+++ b/index.html
@@ -45,30 +45,30 @@
         <!-- Navigation -->
         <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
             <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                        <i class="fa fa-bars"></i>
-                    </button>
-                    <a class="navbar-brand page-scroll" href="#page-top">
-                        <img hidden id="logo" src="img/Talentstix_logo_GWB_1.svg">
-                    </a>
-                </div>
-
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <div class="collapse navbar-collapse navbar-main-collapse">
                     <ul class="nav navbar-nav">
                         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                         <li class="hidden">
                             <a href="#page-top"></a>
                         </li>
                         <li>
-                            <a class="page-scroll cl-effect-7" href="#content">Talentstix</a>
+                            <a class="page-scroll cl-effect-7" href="#" data-toggle="modal" data-target="#conceptModal">Talentstix</a>
                         </li>
                         <li>
-                            <a class="page-scroll cl-effect-7" href="#news">News</a>
+                            <a class="page-scroll cl-effect-7" href="#" data-toggle="modal" data-target="#easyFitModal">Easy Fit</a>
                         </li>
                         <li>
-                            <a class="page-scroll cl-effect-7" href="#contact-section">Kontakt</a>
+                            <a class="page-scroll cl-effect-7" href="#" data-toggle="modal" data-target="#productModal">Produkte</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll cl-effect-7" href="#" data-toggle="modal" data-target="#mediaModal">Media</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll cl-effect-7" href="#" data-toggle="modal" data-target="#teamModal">Team</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll cl-effect-7" href="#" data-toggle="modal" data-target="#contactModal">Kontakt</a>
                         </li>
                     </ul>
                 </div>
@@ -80,7 +80,7 @@
         <!-- Intro Header -->
         <header class="intro">
             <div class="intro-body">
-                <div class="container">
+                <div class="">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
                             <h1 class="brand-heading">
@@ -97,7 +97,8 @@
         </header>
 
         <!-- Content Section -->
-        <section id="content" class="container content-section text-center">
+        <section id="content" class="content-section text-center">
+        <div class="container">
         <div class="row">
 
             <div class="col-sm-4">
@@ -183,6 +184,7 @@
             </div>
 
         </div>
+        </div>
         </section>
 
 <!-- News Section -->
@@ -224,7 +226,8 @@
 </section>
 
             <!-- Contact Section -->
-            <section id="contact-section" class="container content-section text-center">
+            <section id="contact-section" class="content-section text-center">
+                <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <h2>Contact HIO</h2>
@@ -244,10 +247,14 @@
                         </ul>
                     </div>
                 </div>
+                </div>
             </section>
 
+
             <!-- Map Section -->
+            <section id="map-section">
             <div id="map"></div>
+            </section>
 
             <!-- Footer -->
             <footer>
