--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
                             <a href="#page-top"></a>
                         </li>
                         <li>
-                            <a class="page-scroll cl-effect-7" href="#" data-toggle="modal" data-target="#conceptModal">Talentstix</a>
+                            <a class="page-scroll" href="#" data-toggle="modal" data-target="#conceptModal">Talentstix</a>
                         </li>
                         <li>
-                            <a class="page-scroll cl-effect-7" href="#" data-toggle="modal" data-target="#easyFitModal">Easy Fit</a>
+                            <a class="page-scroll" href="#" data-toggle="modal" data-target="#easyFitModal">Easy Fit</a>
                         </li>
                         <li>
-                            <a class="page-scroll cl-effect-7" href="#" data-toggle="modal" data-target="#productModal">Produkte</a>
+                            <a class="page-scroll" href="#" data-toggle="modal" data-target="#productModal">Produkte</a>
                         </li>
                         <li>
-                            <a class="page-scroll cl-effect-7" href="#" data-toggle="modal" data-target="#mediaModal">Media</a>
+                            <a class="page-scroll" href="#" data-toggle="modal" data-target="#mediaModal">Media</a>
                         </li>
                         <li>
-                            <a class="page-scroll cl-effect-7" href="#" data-toggle="modal" data-target="#teamModal">Team</a>
+                            <a class="page-scroll" href="#" data-toggle="modal" data-target="#teamModal">Team</a>
                         </li>
                         <li>
-                            <a class="page-scroll cl-effect-7" href="#" data-toggle="modal" data-target="#contactModal">Kontakt</a>
+                            <a class="page-scroll" href="#" data-toggle="modal" data-target="#contactModal">Kontakt</a>
                         </li>
                     </ul>
                 </div>
@@ -108,42 +108,33 @@
         <div class="row">
 
             <div class="col-sm-4">
-                <div class="category-wrapper">
+                <button class="category-wrapper" data-toggle="modal" data-target="#conceptModal">
                     <div class="category" id="concept">
                         <h4 class="cl-effect-7">
                             <a class="cl-effect-7" href="#" data-toggle="modal" data-target="#conceptModal">Talentstix Konzept</a>
                         </h4>
-                    </div>    
-                    <div class="category-caption">
-                        <p>Zielgruppe,Vorteile Qualität vs. Finanziell, Fittingablauf</p>
                     </div>
-                </div>    
+                </button>    
             </div>
 
             <div class="col-sm-4">
-                <div class="category-wrapper">
+                <button class="category-wrapper" data-toggle="modal" data-target="#easyFitModal">
                     <div class="category" id="easyFit">
                         <h4 class="cl-effect-7">
                             <a href="#" data-toggle="modal" data-target="#easyFitModal">Easy Fit</a>
                         </h4>
-                    </div>    
-                    <div class="category-caption">
-                        <p>Dateneingabe mit Hinweis auf Emailangebot</p>
                     </div>
-                </div>
+                </button>
             </div>
 
             <div class="col-sm-4">
-                <div class="category-wrapper">
+                <button class="category-wrapper" data-toggle="modal" data-target="#productModal">
                     <div class="category" id="products">
                         <h4 class="cl-effect-7">
                             <a href="#" data-toggle="modal" data-target="#productModal">Produkte</a>
                         </h4>
-                    </div>    
-                    <div class="category-caption">
-                        <p>Kopffirmen, Schaftfirmen, Grifffirmen, Bags, Trolley</p>
                     </div>
-                </div>
+                </button>
             </div>
 
         </div>
@@ -151,42 +142,33 @@
         <div class="row">
 
             <div class="col-sm-4">
-                <div class="category-wrapper">
+                <button class="category-wrapper" data-toggle="modal" data-target="#mediaModal">
                     <div class="category" id="media">
                         <h4 class="cl-effect-7">
                             <a href="#" data-toggle="modal" data-target="#mediaModal">Media</a>
                         </h4>
-                    </div>    
-                    <div class="category-caption">
-                      <p>Facebook, Presse, Testimonials, Videos</p>
                     </div>
-                </div>
+                </button>
             </div>
 
             <div class="col-sm-4">
-                <div class="category-wrapper">
+                <button class="category-wrapper" data-toggle="modal" data-target="#teamModal">
                     <div class="category" id="team">
                         <h4 class="cl-effect-7">
                             <a href="#" data-toggle="modal" data-target="#teamModal">Team</a>
                         </h4>
-                    </div>    
-                    <div class="category-caption">
-                        <p>Golfschule Marco Schmuck, HIO-Fitting</p>
                     </div>
-                </div>
+                </button>
             </div>
 
             <div class="col-sm-4">
-                <div class="category-wrapper">
+                <button class="category-wrapper" data-toggle="modal" data-target="#contactModal">
                     <div class="category" id="contact">
-                        <h4 class="cl-effect-7">
+                        <h4 class="cl-effect-7 ">
                             <a href="#" data-toggle="modal" data-target="#contactModal">Kontakt</a>
                         </h4>
-                    </div>    
-                    <div class="category-caption">
-                        <p>Ansprechpartner, Fittingadresse</p>
                     </div>
-                </div>
+                </button>
             </div>
 
         </div>
